# halal-certification-auth

./: .gitignore  README.md
app/: Cargo.toml  index.html
app/src/: app.rs  lib.rs  main.rs  routes.rs  types.rs  (+1 more)
backend/: .script-start-api.sh  README.md  build.sh  env.local.json  samconfig.toml  template.yaml
frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  compose.yaml  index.html
frontend/docker/: Dockerfile
frontend/src/: app.rs  main.rs  routes.rs  types.rs  utils.rs
frontend/src/components/: error_message.rs  input_field.rs  layout.rs  mod.rs  password_rules.rs
frontend/src/config/: index.rs
frontend/src/features/auth/: mod.rs
frontend/src/features/auth/commons/: validation.rs
frontend/src/features/auth/components/: mod.rs  password_reset_request_form.rs  signin_form.rs  signin_mfa_form.rs  signup_confirm_complete.rs  signup_confirm_form.rs  signup_form.rs
frontend/src/features/auth/hooks/: mod.rs  use_confirm_state.rs  use_password_reset_request_state.rs  use_signin_mfa_state.rs  use_signin_state.rs  use_signup_state.rs
frontend/src/features/auth/pages/password_reset/: mfa.rs  request.rs  reset.rs
frontend/src/features/auth/pages/signin/: index.rs  mfa.rs
frontend/src/features/auth/pages/signup/: confirm.rs  confirm_complete.rs  index.rs  mod.rs
frontend/src/pages/auth/password_reset/: mfa.rs  request.rs
frontend/src/pages/auth/signin/: index.rs  mfa.rs
frontend/src/pages/auth/signup/: confirm.rs  index.rs
frontend/src/tests/features/auth/: sinup_form.rs
frontend/static/: component.css
frontend/static/auth/: style.css
(+29 files in other folders)
