[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
authors = ["Yew App Developer harada@respawn.jp"]

[dependencies]
regex = "1.10"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1", features = ["derive"] }
gloo = { version = "0.11.0", features = ["net"] }
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "HtmlFormElement",  # ✅ これを追加
    "HtmlInputElement", # 他にもよく使うやつ
    "Document",
    "Element",
    "Event",
    "Node",
    "Window",
] }
[dev-dependencies]
wasm-bindgen-test = "0.3"
